# mlStax

./: .gitignore  README.md
cpp/: CMakeCache.txt  CMakeLists.txt
cpp/include/: activations.h  dense.h  initializers.h  layer.h  model.h
cpp/src/: activations.cpp  activations.h  dense.cpp  dense.h  initializers.cpp  initializers.h  layer.cpp  layer.h  ll.cpp  model.cpp  model.h
cpp/tests/: unit_tests  unit_tests.cpp  unit_tests.h
haskell/: README.md
python/: .min-char-rnn.py.swp  LICENSE  README.md  mlstax.py
python/mlstax/: activation.py  activations.py  initializer.py  initializers.py  layer.py  model.py  optimizer.py  optimizers.py  tlayer.py  tmodel.py
python/mlstax_np/: layer.py  model.py  optimizer.py
python/reference/: .min-char-rnn.py.swp  input.txt  min-char-rnn.py
python/tests/: \  ingen.py  input.txt  input2.txt  input4.txt  showoff.py  simpletest.py  simpletest_old.py  test.py
